manuscripts/elife-26404/v1/manuscript_v1.md
# Structural basis for plant plasma membrane protein dynamics and organization into functional nanodomains

## Authors

- Julien Gronnier<sup>1</sup>
- Jean-Marc Crowet<sup>2</sup>
- Birgit Habenstein<sup>3</sup>
- Mehmet Nail Nasir<sup>2</sup> ([ORCID: 0000-0003-3429-9445](https://orcid.org/0000-0003-3429-9445))
- Vincent Bayle<sup>4</sup>
- Eric Hosy<sup>5</sup>
- Matthieu Pierre Platre<sup>4</sup>
- Paul Gouguet<sup>1</sup>
- Sylvain Raffaele<sup>6</sup> ([ORCID: 0000-0002-2442-9632](https://orcid.org/0000-0002-2442-9632))
- Denis Martinez<sup>3</sup>
- Axelle Grelard<sup>3</sup>
- Antoine Loquet<sup>3</sup>
- Françoise Simon-Plas<sup>7</sup>
- Patricia Gerbeau-Pissot<sup>7</sup>
- Christophe Der<sup>7</sup>
- Emmanuelle M Bayer<sup>1</sup>
- Yvon Jaillais<sup>4</sup>
- Magali Deleu<sup>2</sup>
- Véronique Germain<sup>1</sup>
- Laurence Lins<sup>2</sup> †
- Sébastien Mongrand<sup>1</sup> ([ORCID: 0000-0002-9198-015X](https://orcid.org/0000-0002-9198-015X)) †

### Affiliations

1. Laboratoire de Biogenèse Membranaire (LBM), Unité Mixte de Recherche UMR 5200, CNRS, Université de Bordeaux Bordeaux France
2. Laboratoire de Biophysique Moléculaire aux Interfaces GX ABT, Université de Liège Gembloux Belgium
3. Institute of Chemistry and Biology of Membranes and Nanoobjects (UMR5248 CBMN), CNRS, Université de Bordeaux, Institut Polytechnique Bordeaux Pessac France
4. Laboratoire Reproduction et Développement des Plantes Université de Lyon, ENS de Lyon, Université Claude Bernard Lyon 1 Lyon France
5. Interdisciplinary Institute for Neuroscience, CNRS, University of Bordeaux Bordeaux France
6. LIPM, Université de Toulouse, INRA, CNRS Castanet-Tolosan France
7. Agroécologie, AgroSup Dijon, INRA, Université Bourgogne Franche-Comté, F-21000 Dijon, ERL 6003 CNRS Dijon France

† Corresponding author

## Abstract

10.7554/eLife.26404.001 Plasma Membrane is the primary structure for adjusting to ever changing conditions. PM sub-compartmentalization in domains is thought to orchestrate signaling. Yet, mechanisms governing membrane organization are mostly uncharacterized. The plant-specific REMORINs are proteins regulating hormonal crosstalk and host invasion. REMs are the best-characterized nanodomain markers via an uncharacterized moiety called REMORIN C-terminal Anchor. By coupling biophysical methods, super-resolution microscopy and physiology, we decipher an original mechanism regulating the dynamic and organization of nanodomains. We showed that targeting of REMORIN is independent of the COP-II-dependent secretory pathway and mediated by PI4P and sterol. REM-CA is an unconventional lipid-binding motif that confers nanodomain organization. Analyses of REM-CA mutants by single particle tracking demonstrate that mobility and supramolecular organization are critical for immunity. This study provides a unique mechanistic insight into how the tight control of spatial segregation is critical in the definition of PM domain necessary to support biological function. DOI: http://dx.doi.org/10.7554/eLife.26404.001

## Introduction

Membrane proteins and lipids are dynamically organized in domains or compartments. Emerging evidences suggest that membrane compartmentalization is critical for cell signaling and therefore for development and survival of organisms (Grecco et al., 2011). The understanding of molecular mechanisms governing protein sub-compartmentalization in living cells is one of the most critical issues regarding the comprehension of how membranes function.

In this paper, we exploit the protein family REMORIN (REMs), the best-characterized PM-domain markers in plants (Raffaele et al., 2009; Jarsch et al., 2014; Jarsch and Ott, 2011). REMs belong to a multigenic family of six groups encoding plant-specific membrane-bound proteins involved in responses to biotic and abiotic stimuli (Raffaele et al., 2009; Jarsch et al., 2014; Jarsch and Ott, 2011; Raffaele et al., 2007; Gui et al., 2014; Jamann et al., 2016). The physiological functions of REMs have been poorly characterized. To date, their involvement has been clearly reported in plant‐microbe interactions and hormonal crosstalk: in Solanaceae, group 1 REMs limit the spreading of Potato Virus X (PVX), without affecting viral replication (Raffaele et al., 2009), and promote susceptibility to Phytophthora infestans (Bozkurt et al., 2014). A group 2 REM was described as essential during nodulation process in Medicago truncatula (Lefebvre et al., 2010; Tóth et al., 2012). In rice, a group 4 REM is upregulated by abscissic acid and negatively regulates brassinosteroid signaling output (Gui et al., 2016). Arabidopsis group 4 REMs play also a role as positive regulators of geminiviral infection (Son et al., 2014). Finally, group 1 and group 6 REMs regulate the PM-lined cytoplasmic channels called plasmodesmata (PD), specialized nanochannels allowing intercellular communication in plants. Remarkably, these latter isoforms of REMs were found to be able to modify PD aperture leading to a modification of viral movement (Raffaele et al., 2009; Perraki et al., 2014) and an impact on the grain setting in rice, respectively (Gui et al., 2014). To fulfil these functions, REMs need to localize to the PM (Perraki et al., 2012; Bozkurt et al., 2014). Nevertheless, the functional relevance of REM PM-nanodomain organization and the molecular mechanisms underlying PM-nanodomain organization of REM remain to be elucidated.

Our groups defined a short peptide located at the C-terminal domain of REM, called REM-CA (REM C-terminal Anchor) as a novel membrane-binding domain shaped by convergent evolution among unrelated putative PM-binding domains in bacterial, viral and animal proteins. (Perraki et al., 2012; Raffaele et al., 2013; Konrad et al., 2014). REM-CA is necessary for PM localization of REMs and sufficient to target a given soluble protein (e.g. GFP) to the PM, highlighting that PM-domain localization is conferred by the intrinsic properties of REM‐CA. REM-CA binds in vitro to polyphosphoinositides but the association of REM-CA with the PM is not limited to electrostatic interactions and the final interaction with PM display anchor properties similar to intrinsic protein (Perraki et al., 2012). REM-CA can be S-acylated (Hemsley et al., 2013), although this modification is not the determinant for their localization to membrane domains, since deacylated versions of some REMs remain able to localize to membrane domains (Jarsch and Ott, 2011; Hemsley et al., 2013). The specificity of targeting, the anchoring and nanoclustering mechanisms mediated by REM-CA to the PM inner-leaflet nanodomains remain therefore elusive.

In this paper, using various modeling, biophysical, high-resolution microscopy and biological approaches, we deciphered an original and unconventional molecular mechanism of REM anchoring to PM: the target from the cytosol to PM by a specific PI4P-protein interaction, a subsequent folding of the REM-CA in the lipid bilayer, and its stabilization inside the inner-leaflet of the PM leading to an anchor indistinguishable from an intrinsic membrane protein. By constructing mutants, we were able to alter REM PM-nanodomain organization. Unexpectedly, single molecule studies of REM mutants reveal that single-molecule mobility behavior is not coupled to supramolecular organization. These mutants were unable to play their role in the regulation of cell-to-cell communication and plant immune defence against viral propagation, emphasizing the putative role of PM nanodomains in signal transduction involved in the plant cell’s responses against viruses.

## Results and discussion

To specifically analyze the implication of REM-CA-lipid interactions in membrane targeting, we used the naturally non-S-acylated REM variant: Solanum tuberosum REMORIN group 1 isoform three called StREM1.3 (Figure 1—figure supplement 1). StREM1.3 is the best-studied isoform of REMs: StREM1.3 is a trimeric protein (Perraki et al., 2012) that strictly localizes to the PM and segregates in a sterol-dependent manner into ca. 100 nm nanodomains (Raffaele et al., 2009; Demir et al., 2013). In this study, we use Nicotinana benthamiana leaf epidermal cells as a model tissue. In this context, we showed that StREM1.3 is a functional homolog of the PM-localized Nicotinana benthamiana endogenous group 1b REMs toward the restriction of Potato Virus X (PVX) spreading. Consistently, NbREM1.2 and NbREM1.3 isoforms are highly expressed in leaf epidermis (Figure 1—figure supplement 2). Importantly, PVX is a mechanically transmitted virusfor which the infection initiates in the epidermis and spreads from cell-to-cell via different tissues to reach the phloem vasculature and infect the whole plant (Cruz et al., 1998). In this context, leaf epidermis is the appropriate tissue to study the role of PM-nanodomains in the cell’s responses to viruses.

## StREM1.3 is targeted to PM domains by a mechanism likely independent of the secretory pathway

Trafficking studies of REMs in plant cells showed that their PM localization (observed as secant or tangential views of epidermal cells,

![Figure 1.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig1-v1.jpg)

**Figure 1.:** (A) Explanatory schematic of the secant or surface views of N. benthamiana leaf abaxial epidermal cell plasma membrane (PM) used throughout the article. (B) Confocal imaging surface views of Nicotinana benthamiana leaf epidermal cells expressing YFP-StREM1.3 with or without dominant-negative SAR1H52N (PMA4-GFP was used as a potency control, see Figure 1—figure supplement 2), 24 hr after agroinfiltration. Tukey boxplots show the mean fluorescence intensity and the Spatial Clustering Index, SCI (n = 3, quantification made on a representative experiment, at least 38 cells per condition). (C) Surface view confocal images showing the effect of Fenpropimorph (Fen) on PM patterning of YFP-StREM1.3 domains 20 hr after agroinfiltration. Tukey boxplots show the mean fluorescence intensity and the SCI of YFP-StREM1.3 in the Mock (DMSO) or Fen-treated leaves (50 µg/mL), at least 46 cells from three independent experiments. (D) Secant view confocal fluorescence microscopy images displaying the degree of order of CFP-StREM1.3‐enriched domains (left panel) by the environment‐sensitive probe Di‐4‐ANEPPDHQ (middle panel) 48 hr after agroinfiltration. Di‐4‐ANEPPDHQ red/green ratio (RGM) was measured for the global PM, and for the 10, 5, 2% most intense CFP-StREM1.3 signal-associated pixels (right panel). A lower red/green ratio is associated with an increase in the global level of membrane order, at least 70 cells from three independent experiments. (E) Surface view confocal images showing the effect of dead or active constructs of MAP-SAC1p (MAP-mTurquoise2-SAC1p from yeast, see Figure 1—figure supplement 5) on PM domain localization of YFP-StREM1.3 20 hr after agroinfiltration. Tukey boxplots show the mean fluorescence intensity and the SCI of YFP-StREM1.3, at least 52 cells from four independent experiments. (F) Model showing the PI4P-driven targeting of the trimer of StREM1.3 to the PM and its PI4P- and sterol-dependant nanodomains organization. In all panels, p-values were determined by a two-tailed Mann-Whitney test.DOI: http://dx.doi.org/10.7554/eLife.26404.002

![Figure 1—figure supplement 1.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig1-figsupp1-v1.jpg)

**Figure 1—figure supplement 1.:** DOI: http://dx.doi.org/10.7554/eLife.26404.003

![Figure 1—figure supplement 2.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig1-figsupp2-v1.jpg)

**Figure 1—figure supplement 2.:** Nicotiana benthamiana Group 1b REMORINs are expressed in leaf epidermal cells, encode for PM nanodomain localized proteins and are functional homologs of StREM1.3 toward PVX propagation.(A) REMORIN genes of N. benthamiana expressed in Reads Per Kilobase of transcripts per million mapped reads (RPKM). RNAseq data were retrieved using SRA toolkit (see experimental section). (B) Pairwise comparison of protein identity for StREM1.3 and closest group 1 NbREMs expressed as a percentage of identity. (C) Photo of epidermis peeling performed on a glass slide freezing with liquid nitrogen to reduce transcriptional modification due to mechanical stress. Leaf tissue (1) without skin (2) and epidermis (3). (D) The expression of endogenous NbREM1.3 and NbREM1.2 in epidermis was revealed by RT-PCR. (E,F) Confocal microscopy pictures of transiently expressed RFP-NbREM1.2 and GFP-NbREM1.3 transiently-expressed via A. tumefaciens in N. benthamiana epidermal cells at 2 DAI show that they both localize in PM-nanodomains. Scale bar indicate 10 μm. (G) Propagation of PVX::GFP alone and in combination with A. tumefaciens carrying empty vector (mock), RFP-StREM1.3, RFP-NbREM1.2 or RFP-NbREM1.3, and corresponding quantification. Scale bar indicate 400 μm. n = 4. Letters indicate significant differences revealed by Tukey’s comparisons test p<0.001. (H) Total proteins extracted from leaf samples and probed by anti-StREM1.3 antibodies.DOI: http://dx.doi.org/10.7554/eLife.26404.004

![Figure 1—figure supplement 3.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig1-figsupp3-v1.jpg)

**Figure 1—figure supplement 3.:** StREM1.3 is targeted to the PM-domains by a mechanism independent of the COP-I/COP-II secretory pathway.(A) Secant view of confocal dual-colour imaging of N. benthamiana expressing YFP-StREM1.3 or proton pump PMA4-GFP (used as positive control) with or without dominant-negative Sar1H52N / SKL-CFP 24 hr after agro-infiltration, SKL-CFP is used as a transformation control (de Marcos Lousa et al., 2016). DIC: differential interface contrast. Scale: 10 µm. Lower pictures show merged images. (B) Secant view of confocal images of N. benthamiana expressing YFP-StREM1.3 or aquaporin AtPIP1.1-RFP with or without Brefeldin A, 48 hr after agroinfiltration. Scale bar: 10 µm.DOI: http://dx.doi.org/10.7554/eLife.26404.005

![Figure 1—figure supplement 4.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig1-figsupp4-v1.jpg)

**Figure 1—figure supplement 4.:** (A, B). Surface view confocal images of N. benthamiana epidermal cells expressing YFP-StREM1.3 or PMA4-GFP 48 hr after agroinfiltration. (C) Fluorescence Intensity plots through the indicated lines. (D) Spatial Clustering Index (SCI) was calculated by dividing the mean of the 5% highest values by the mean of 5% lowest fluorescence intensities values (U.A) in the PM. Comparison of SCI show the difference of clustering between PMA4 (smooth location, n = 27 cells) and StREM1.3 (discrete location, n = 22 cells), significance tested by a two-tailed Mann-Whitney test. E, F G) SCI is not correlated with fluorescence intensity. Surface view confocal images and intensity plots along the indicated lines of N. benthamiana epidermal cells expressing low or high levels of YFP-StREM1.3. (H) Tukey boxplot showing statistical differences in fluorescence intensity of cells expressing low or high levels of YFP-StREM1.3, n = 17. (I) SCI calculated for cells expressing low or high fluorescence levels of YFP-StREM1.3 showing no difference in YFP-StREM1.3-associated nanodomains in the PM between the two levels of expression. Different italicized-letters indicate significant differences among means (p<0.001, two-tailed Mann-Whitney test).DOI: http://dx.doi.org/10.7554/eLife.26404.006

![Figure 1—figure supplement 5.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig1-figsupp5-v1.jpg)

**Figure 1—figure supplement 5.:** N.benthamiana leaves by the drug Fenproprimorph (fen).(A) Quantification by GC-MS of the Δ5 phytosterols and cycloartenol from control and fen-treated N. benthamiana leaves (n = 3, error bars indicate SEM). Cycloartenol accumulation is similar to what was decribed in (Grison et al., 2015). (B) Confocal images of surface or secant views of control and fen-treated N. benthamiana leaf epidermal cells expressing PMA4-GFP 48 hr after agroinfiltration. (C–E) Intensity plots and SCI of PMA4-GFP after fen treatment. Scale bars, 10 µm.DOI: http://dx.doi.org/10.7554/eLife.26404.007

![Figure 1—figure supplement 6.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig1-figsupp6-v1.jpg)

**Figure 1—figure supplement 6.:** N.benthamiana leaf epidermal cells and specifically depletes PM PI4P but not PI(4,5)P2 or PS.(A) Secant view confocal images of N. benthamiana leaf epidermal cells expressing either Dead or Active MAP-mTURQUOISE2-SAC1p from yeast constructs and P19 to increase expression (Baulcombe and Molnár, 2004). Observations were made 48 hr after agroinfiltration. Scale bar, 10 µm. (B) Secant view confocal images of N. benthamiana leaf epidermal cells expressing three independent PI4P binding domain biosensors: cYFP-P4MSidM, mCitrine-2xPH (FAPP1) and mCitrine-1xPH (OSBP1) (Simon et al., 2014) alone or co-expressed with either active or dead MAP-mTurquoise2-SAC1p (Simon et al., 2016). (C) Secant and surface view confocal images of N. benthamiana leaf epidermal cells expressing a sensor for PIP4,5P2 (cYFP-2xPH PLC), a sensor for PS (cYFP-2xPH Evectin) and the PM protein (PMA4-GFP) with either active or dead MAP-mTurquoise2-SAC1p. Scale bars for secant and surface views, 10 µm. (D) Quantification of PM fluorescence intensity for Pi4P, PS, PI(4,5)P2 biosensors and PMA4-GFP under co-expression with MAP-SAC1p and MAP-SAC1p dead.DOI: http://dx.doi.org/10.7554/eLife.26404.008

StREM1.3 being a hydrosoluble protein intrinsically attached to the PM with no transit peptide, no transmembrane domain and no membrane anchor signatures (Raffaele et al., 2007), altogether our data suggest that StREM1.3 (likely under the form of a trimer [Perraki et al., 2012]) is targeted to the PM from the cytosol by a mechanism independent of the classical COP-II-mediated secretory pathway and that the formation of StREM1.3 PM-nanodomains likely does not rely on secretory trafficking.

## REMORIN localization into highly-ordered PM-nanodomains is mediated by sterol and phosphatidylinositol 4-phosphate

Group 1 REMs co-purify in the detergent-resistant membrane biochemical fraction with sterols and phosphoinositides (PIPs) (Raffaele et al., 2009; Demir et al., 2013; Mongrand et al., 2004; Furt et al., 2010). REM-CA also binds to PIPs in vitro (Perraki et al., 2012). We therefore tested the involvement of both sterols and PIPs in the PM-nanodomain localization of StREM1.3 in vivo by modifying the PM lipid content. First, to alter membrane sterol composition we chose fenpropimorph (fen). Fen alters the PM sterol-composition but not the total amount of sterols (Grison et al., 2015; Hartmann et al., 2002). As expected, after fen treatment, the content of ∆5-sterols decreased concurrently with an increase in cycloartenol (Figure 1—figure supplement 5A). This qualitative modification of sterol composition had no effect on the targeting of YFP-StREM1.3 to the PM but abolished its nanodomain organization measured by the SCI (Figure 1C). Proton pump PMA fused to GFP was used as control of membrane integrity after fen treatment (Figure 1—figure supplement 5B–E). To obtain further evidence of the enrichment of StREM1.3 into sterol-enriched nanodomains, expected to display a higher degree of order (Dufourc, 2008), we used the environment–sensitive probe di-4-ANEPPDHQ in vivo (Zhao et al., 2015). Figure 1D shows that nanodomains enriched in YFP-StREM1.3 co-localized with highly ordered regions of the PM, in good agreement with the involvement of sterols in StREM1.3 localization.

Second, we tested the implication of PIPs in StREM1.3 recruitment to the PM. We focused in particular on Phosphatidylinositol 4-phosphate (PI4P). Recent works showed that PI4P is enriched in the inner-leaflet of plant PM, conferring a negatively charged electrostatic field that defines PM identity in regard to other endomembranes (Vermeer et al., 2009; Simon et al., 2016, 2014). To alter the PI4P content, we used the Myristoylated/Palmitoylated-Phosphatidylinositol 4-phoshatase SAC1p enzyme from yeast (Hammond et al., 2012) fused to mTurquoise2 (MAP-mTU2-SAC1p) which specifically dephosphorylates PI4P at the PM level (Hammond et al., 2012; Stefan et al., 2011; Mesmin et al., 2013; Moser von Filseck et al., 2015a, 2015b) without impacting PS or PI(4,5)P2 (Simon et al., 2016) (Figure 1—figure supplement 6). Compared to the expression of the dead version of MAP-SAC1p, the expression of the active form induced a reduction in PM-associated PI4P concentration leading to a strong decrease of both YFP-StREM1.3 signal and lateral segregation at the PM (Figure 1E). These data suggest that PI4P is required for the targeting of StREM1.3 at the PM and for its sub-compartmentalization within the PM plane.

Altogether, these results suggest that PM inner-leaflet lipids, notably sterols and PI4P are critical for the targeting of the StREM1.3 to PM nanodomains by a mechanism independent of the classical secretory pathway (Figure 1F).

## REM-C-terminal anchor peptide is an unconventional PM-binding domain embedded in the bilayer that folds upon specific lipid interaction

As mentioned before, REM-CA is critical for PM-targeting (

![Figure 2.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig2-v1.jpg)

**Figure 2.:** (A) Primary sequence of StREM1.3 showing the two putative regions 1 and 2 (R1 and R2) composing the REM-CA. Hatched domain represents the putative coiled-coil helix. (B) Order parameter of the carbon atoms of the fatty acid moiety of all-deuterated 1,2-dimyristoyl-D54-sn-3-phosphocholine (DMPC-d54) in PM inner leaflet-mimicking liposomes revealed by deuterium NMR. (C) Plots of the maximal surface pressure variation (ΔΠ) vs. the initial surface pressure (Πi) (left panel) and the corresponding maximal insertion pressure (MIP) and synergy factor (right panel) obtained from the adsorption experiments performed viaa Langmuir trough with a monolayer composed of phosphatidylcholine (PC), phosphoinositides (PIPs) and sitosterol (Sito) (see Figure 2—figure supplement 3A). The insignificant ΔΠ obtained for D1 indicates that D1 cannot penetrate into the monolayer. (D) Subcellular localization of YFP-StREM1.3 deleted for R2, transiently expressed in N. benthamiana leaf epidermal cells. Scale bars, 10 µm. (E) FT-IR spectra measured in the 1155–1255 cm−1 absorbance region for the REM-CA, R1 and R2 peptides inserted into MLVs composed of PC:PIPs:Sito (see Figure 2—figure supplement 3B). (F) FT-IR spectra in the 1600–1700 cm−1 absorbance region for the REM-CA, R1, R2 peptides and liposome alone with MLVs composed of PC alone and PC:PIPs:Sito (see Figure 2—figure supplement 3B). (G) Solid-state NMR spectra of REM-CA peptides co-solubilized with DMPC-d54 supplemented with PIPs and Sitosterol (see Figure 2—figure supplement 3C). Excerpts on the position of the Cα resonance frequencies of Leucines and Isoleucines on the abscissa are depicted. (H) Radial distribution functions (RDF) of Y184 and sterols, and average distances between the five lysine(K)/arginine(R) residues of REM-CA and the phosphate groups of PI4P during MD simulation, bar indicates mean ± s.d., letters indicate significant differences revealed by Dunn’s multiple comparisons test p<0.0001. (I) Model of the insertion of REM-CA in the PM inner-leaflet based on tensiometry, FTIR, MD and NMR studies. Inset displays Molecular Dynamics (MD) model of the two lysines, K192 and K193, likely in interaction with the phosphate groups of PIPs.DOI: http://dx.doi.org/10.7554/eLife.26404.009

![Figure 2—figure supplement 1.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig2-figsupp1-v1.jpg)

**Figure 2—figure supplement 1.:** 31P and 2H solid-state NMR analysis.Thin-layer chromatography analysis of Phosphoinositides mix (PIPs). (A) REM-CA folds in alpha helix in hydrophobic environment. 2D 1H-15N correlation spectra of REM-CA recorded at 800MHz using the SOFAST-HMQC pulse sequence. All spectra were recorded at 25°C with 1 mM of REMCA-WT in H2O/D2O (90/10) (red), Dodecylphosphocholine-d38, DPC (blue) and trifluoroethanol-d2, TFE (grey). (B) Primulin-stained high-performance thin layer chromatography (HP-TLC) plate of the Phosphoinositides mix (PIPs), reference P6023 SIGMA, along with authentic standards: Phosphatidylserine (PS) Phosphatidylinositol (PI), Phosphatidylinositol-4-phosphate (PI4P) and Phosphatidylinositol-4,5-bisphosphate PI(4,5)P2). (C) Histogram representation of relative amounts of each lipid species present in the PIPs quantified by densitometry scanning. Bars indicate SEM, n = 3. (D) Temperature effect on REM-CA containing liposomes in the range −8°C to 31°C. Heating curves and corresponding NMR lineshape do not show significant changes. (E) 31P NMR spectra of deuterated 1,2-dimyristoyl-d54-sn-3-phosphocholine (DMPC-d54) membrane in the absence or presence of REM-CA.DOI: http://dx.doi.org/10.7554/eLife.26404.010

![Figure 2—figure supplement 2.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig2-figsupp2-v1.jpg)

**Figure 2—figure supplement 2.:** StREM1.3 suggests the existence of two distinct structural regions.(A) Primary sequence of StREM1.3. (B) Sequence and predicted structure of the StREM1.3 REM-CA peptide predicted by different methods, the consensus secondary structure prediction is indicated below; alpha helix (h), random coil (c), beta sheet (e). (C) HCA (hydrophobic cluster analysis) plot of the REM-CA sequence of StREM1.3. V, F, W, Y, M, L and I are hydrophobic residues. These amino acids are circled and hatched to form hydrophobic clusters, see online methods.DOI: http://dx.doi.org/10.7554/eLife.26404.011

![Figure 2—figure supplement 3.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig2-figsupp3-v1.jpg)

**Figure 2—figure supplement 3.:** (A) Plots of the maximal surface pressure variation (ΔΠ) vs. the initial surface pressure (Πi) and of the corresponding maximal insertion pressure (MIP) obtained from the adsorption experiments with Langmuir through for REM-CA peptide, with different monolayer compositions i.e. PC alone, PC:PIPs (molar ratio 80:20) or PC:PIPs:Sito (molar ratio 70:20:10). (B) Fourier Transformed-InfraRed (FT-IR) spectra of REM-CA, R1 and R2 peptides in presence of different composition of MLV i.e. PLPC alone, PC:PIP (molar ratio 80:20), PC:Sito (molar ratio 90:10) or PC:PIP:Sito (molar ratio 70:20:10). Three regions of interest of the spectra are shown: the 3050–2800 cm−1 region corresponds to the absorbance of lipid alkyl chains, the 1295–1125 cm−1 region to the lipid phosphate groups and the 1800–1600 cm−1 region to the lipid C=O ester and peptide amide groups. (C) Solid-state NMR structure of REM-CA peptides 13C-labeled at the positions L180, G188 and I184. NMR spectra are shown for membranes containing REM-CA peptides, composed of deuterated 1,2-dimyristoyl-D54-sn-3-phosphocholine, (DMPC-d54), supplemented with sitosterol and Phosphoinositides mix (PIPs), see Figure 2—figure supplement 1B,C.DOI: http://dx.doi.org/10.7554/eLife.26404.012

![Figure 2—figure supplement 4.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig2-figsupp4-v1.jpg)

**Figure 2—figure supplement 4.:** (A) Snapshots of MD simulations of REM-CA in the presence of a bilayer composed of 1-palmitoyl-2-linoleyl-sn-glycerol-3-phosphocholine (PLPC), sitosterol and PI4P (also see Video 1). (B) Atomistic structure of REM-CA in PLPC/PI4P/sitosterol matrix. MD atomistic simulations propose a model of the inserted structure of REM-CA in the lipid bilayer where peptide-lipid interaction would be mediated by the interaction of REM-CA with the phosphate groups of phosphoinositides and where the lateral ring of tyrosine 184 (Y184) is observed facing the inside of the membrane.DOI: http://dx.doi.org/10.7554/eLife.26404.013

First, liquid-state NMR spectra of REM-CA in aqueous environment showed that REM-CA peptide is unstructured (Perraki et al., 2012) (Figure 2—figure supplement 1A). Second, equivalent spectra, acquired in hydrophobic environment showed that REM-CA folds into an alpha helical conformation (Figure 2—figure supplement 1A). Third, to gain insights into the embedment of REM-CA in the PM we performed solid-state NMR experiments on liposomes mimicking the PM inner-leaflet composition i.e. containing phosphatidylcholine (PC), PIPs and phosphatidylserine (PS) (Cacas et al., 2016) (Figure 2—figure supplement 1B,C shows the lipid content of the phosphoinositide mix, further called PIPs, used in this study). In these conditions, REM-CA's partial insertion into liposomes increased the degree of order of the first 10 carbon atoms of acyl chains indicated that REM-CA is partially embedded in the lipid phase (Figure 2B). Importantly, REM-CA insertion does not modify the overall bilayer structure as suggested by a very similar global thermotropism (Figure 2—figure supplement 1D,E).

Next, we determined the REM-CA peptide regions that are inserted in the hydrophobic core of the bilayer. In silico analyses predicted that REM-CA is structurally divided into two regions (Figure 2—figure supplement 2): a putative helical region (171-190aa, called Region 1, R1) and a more hydrophobic non-helical region (191-198aa called Region 2, R2). We thus tested the ability of REM-CA, R1 or R2 peptides alone to insert into monolayers mimicking the PM inner-leaflet (Cacas et al., 2016). Adsorption assays showed that the penetration capacity of the peptide REM-CA was higher in the monolayers composed of PC, PIPs and sitosterols, than in monolayers composed of PC alone (Figure 2—figure supplement 3A). Furthermore, peptide R2 but not the R1 was able to insert into monolayers (Figure 2C). Consistently, deletion of R2 in the REM-CA of YFP-StREM1.3 abolished PM association in planta (Figure 2D).

We next performed Fourier transform-infrared spectroscopy (FT-IR) to characterize REM-CA-lipid interactions at atomistic level. FT-IR showed a maximum intensity shift in the absorbance wavenumber of lipid phosphate groups in the presence of REM-CA, R1 and R2 peptides, with a stronger effect of R1 as compared to R2 (Figure 2—figure supplement 3B). This clearly shows that the polar heads of lipids are involved in the REM-CA-liposome interactions. Moreover, a maximum intensity shift in the absorbance wavenumber of carbon-hydrogen bonds was observed in presence of R2, which confirmed that R2 is more embedded than R1 within the lipid phase (Figure 2E).

To further inquire into the role of lipids in the folding of REM-CA, we performed structural analyses by FT-IR and solid-state NMR of the peptides in liposomes containing either PC alone, or PC with PIPs and sitosterols. FT-IR experiments showed that REM-CA, R1 and R2 peptides are mainly a mix of different structures in PC-containing liposomes (Figure 2F). In contrast, R1 was more helical and R2 was more extended when sitosterol and PIPs are present in the bilayer (Figure 2F). Importantly, PIPs were sufficient to induce R1, R2 and REM-CA folding (Figure 2—figure supplement 3B).

Lipid-mediated folding of REM-CA, embedded in the bilayer, was further confirmed by solid-state NMR on liposomes containing 13C-labeled REM-CA peptides on three residues: L180 and G188 in R1 and I194 in R2 (underlined in Figure 2A). Solid-state NMR spectra confirmed that R1 adopted a single non-helical conformation in PC, while partially folding into an alpha helix in the presence of PIPs and sitosterol (Figure 2G, Figure 2—figure supplement 3C).

## Molecular dynamics simulations reveal interactions between REM-CA residues and lipids in the ternary lipid mixture

Molecular Dynamics (MD) simulation was performed with REM-CA and a bilayer composed of PC, sitosterol and PI4P, see Video 1. MD confirmed that REM-CA inserted itself in the lipid bilayer and presented two distinct regions (Figure 2—figure supplement 4A) in good agreement with the in silico analyses (Figure 2—figure supplement 2). MD proposed that albeit facing the inside of the bilayer (Figure 2—figure supplement 4B), the lateral ring of tyrosine Y184 (tyrosine being a residue often observed in interaction with sterols [Nasir and Besson, 2011]) was unlikely to interact with sterols with a distance between Y184 and sterol superior to 1 µm (Figure 2H). MD also modeled that lysines and arginine present in REM-CA, namely K192 and K193, and to a lesser extent K183 and R185, can form salt-bridges with the phosphate groups of PI4P (Figure 2H, Figure 2—figure supplement 4B). The lysine K176 was not in interaction with PI4P.10.7554/eLife.26404.014Video 1.Molecular dynamics (MD) simulation reveals interactions between REM-CA residues and lipids in the ternary lipid mixture.MD coarse-grained simulations propose a model of the insertion of REM-CA in the lipid bilayer (PLPC/PI4P/sitosterol), where peptide-lipid interaction would be mediated by the interaction of REM-CA with the phosphate groups of PI4P (in gold) and the embedment of the region 2 (in yellow) inside the lipid phase, see online methods.DOI: http://dx.doi.org/10.7554/eLife.26404.014

Altogether, we propose a model for the structure of REM-CA inserted in the PM inner-leaflet, composed of two domains: a PI4P-mediated alpha-helical folding conformation for R1 arranged on the PM surface interacting with the lipid polar heads through lysines and arginine and a hydrophobic conformation for R2 embedded inside the lipid phase (Figure 2I).

Classically, protein interactions with lipids occur through TM segments (Lin and London, 2013) or for monotopic proteins (to which REMs belong) through GPI anchoring, amphipathic helixes or ionic interactions (Vinothkumar and Henderson, 2010; Hedger et al., 2015). Moreover, specific interactions with PIPs usually occur through well-described motifs such as PH, C2 or PDZ domains (Di Paolo and De Camilli, 2006). The membrane-anchoring properties of REM-CA that we reveal here are therefore unconventional: these properties do not fit into any of the aforementioned lipid-interacting patterns and to the best of our knowledge such a membrane-anchoring conformation is not described in structural databases at present.

## Positively charged residues of REMORIN C-terminal anchor are essential for PM-targeting

To further test the role of REM-CA residues found by MD in putative interactions with lipids (

![Figure 3.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig3-v1.jpg)

**Figure 3.:** (A) Sequence Logo obtained from 51 Group 1 REM-CA sequences presented in Figure 1—figure supplement 1, and StREM1.3 REM-CA sequence. (B) Summary of the 20 REM-CA mutants of StREM1.3 generated in this study and their corresponding subcellular localizations. PM, Plasma Membrane; Cyt, Cytosol. The total electrostatic charge of each mutated REM-CA is indicated. (C) Confocal images presenting secant views of N. benthamiana epidermal cells expressing 20 YFP-StREM1.3 REM-CA mutants (single to sextuple mutations), 48 hr after agroinfiltration. Scale bar of 10 µm applies to all images.DOI: http://dx.doi.org/10.7554/eLife.26404.015

![Figure 4.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig4-v1.jpg)

**Figure 4.:** (A) Surface view confocal images of the localization of REM-CA single and double mutants. Scale bar, 10 µm. (B) Tukey boxplot showing the Spatial Clustering Index of the REM-CA single and double mutants. Letters indicate significant differences revealed by Dunn’s multiple comparisons test p<0.05 (n = 3). (C) Quantification of Potato Virus X fused to GFP (PVX:GFP) cell-to-cell movement alone (Mock) or co-expressed with StREM1.3 WT or StREM1.3 REM-CA single and double mutants. Tukey boxplots represent the PVX:GFP infection foci area normalised to the mock condition. Letters indicate significant differences revealed by Dunn’s multiple comparisons test p<0.05 (n = 3). (D) Plasmodesmal permeability assessed in the presence of WT, single or double mutants of REM-CA, according to (Perraki et al., 2012). Tukey boxplots represent the percentage of cells presenting a free diffusion of the GFP (n = 3), letter indicate significant differences revealed by Dunn’s multiple comparisons test p<0.05 (Statistical analysis in Figure 4—figure supplement 1).DOI: http://dx.doi.org/10.7554/eLife.26404.016

![Figure 4—figure supplement 1.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig4-figsupp1-v1.jpg)

**Figure 4—figure supplement 1.:** StREM1.3 REM-CA mutant over-expression on plasmodesmata permeability and PVX cell-to-cell movement.(A) Plasmodesmata permeability test performed by visualizing cell-to-cell movement of GFP from a single-cell to its neighbors. Epifluorescence microscopy images represent a single-cell where GFP has not diffused to neighboring cells (no Diffusion) and another transformed single-cell where GFP has diffused to three neighboring cells (Diffusion) Scale bar, 100 µm. Plasmodesmal permeability was assessed with GFP alone, or in the presence of RFP-StREM1.3 mutants 5 days after infiltration, resume of results obtain from at least three independent experiments are provided in the table. Bottom panel, Total proteins extracted from leaf samples of the plasmodesmal permeability test and probed by anti-StREM1.3 antibodies (Raffaele et al., 2009) for each condition. (B) Representative epifluorescence microscopy pictures of PVX:GFP infection foci on N. benthamiana leaf epidermal cells for 12 RFP-StREM1.3 constructs 5 days after infection. Scale bar, 400 µm. Bottom panel, Total proteins extracted from leaf samples of the PVX:GFP infection assay and probed by anti-StREM1.3 antibodies (Raffaele et al., 2009) for each condition.DOI: http://dx.doi.org/10.7554/eLife.26404.017

## Positively charged residues of REMORIN C-terminal anchor are essential for PM-nanodomain identity and function

We next focused on the mutants that still were targeted to the PM to test whether the mutations had an effect on their localizations in nanodomains. Consistently with MD calculations of the distance with the PI4P polar-head (Figure 2H), mutating K192, K193, and K183 revealed the requirement of these residues for a correct nanodomain organization whereas K176 and R185 taken alone are dispensable. Moreover, the coupling of K183, K192 and K193 mutations with other mutations on charged residues increased the alteration of StREM1.3 PM-nanodomain organization as assessed by the SCI (Figure 4A,B).

To address the functional relevance of REM nanodomain-organization, we exploited the previously reported role of StREM1.3 in restricting cell-to-cell propagation of PVX by decreasing plasmodesmata size-exclusion limit (Raffaele et al., 2009; Perraki et al., 2014, 2012). Single mutants K176S, Y184F and R185A behaved like StREM1.3 WT whereas K183S and K192A and K193A partially lost their ability to reduce viral intercellular movement and PD permeability (Figure 4C,D and Figure 4—figure supplement 1). A close to complete loss of activity was observed with REM-CA double mutants, unequivocally linking the protein lateral segregation with its function to regulate cell-to-cell connectivity.

## Single-particle tracking localization microscopy reveals that REMORIN C-terminal anchor mutants display a lower diffusion coefficient mobility

To better characterize the PM-localization of REM-CA mutants, we used single-particle tracking photoactivated localization microscopy in variable angle epifluorescence microscopy mode (spt-PALM VAEM [

![Figure 5.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig5-v1.jpg)

**Figure 5.:** (A) Super-resolved trajectories (trajectories > 20 points;) of EOS-StREM1.3 WT and REM-CA mutants (K183S, K192A, K183S/K192A and K192A/K193A) visualized by high-resolution microscopy spt-PALM VAEM. 3. (B,C) Distribution of diffusion coefficients (D) represented as log(D) of the different fusion proteins and distributions of the peak D values of individual cells obtained by normal fits and were plotted as log(D), bar indicates mean ± s.e.m. (D) Mean Square Displacement (MSD) over time for the global trajectories > 15 points of each EOS-StREM1.3 construct (n = 13 to 51 cells over three independent experiments). (E) Representative trajectories of StREM1.3 WT and REM-CA mutants. Significant differences revealed by Dunn’s multiple comparisons.DOI: http://dx.doi.org/10.7554/eLife.26404.018

## Live PALM data reveals that REMORIN C-terminal anchor defines protein segregation

To describe the supra-molecular organization of the proteins at PM level, we next analyzed live PALM data using Voronoï tessellation (

![Figure 6.](https://cdn.elifesciences.org/articles/26404/elife-26404-fig6-v1.jpg)

**Figure 6.:** (A) Live PALM analysis of molecules localization by tessellation-based automatic segmentation of super-resolution images. (B) Diameter distributions of the cluster of EOS fusion proteins (line shows the Gaussian fit). (C) Nanodomains surface expressed in percentage of the total PM surface. (D) Percentage of molecule localizing in nanodomain. (E) Nanodomain density (number of nanodomain.µm−2) for the indicated proteins. Statistics were performed on at least six data sets per construction, see online methods for details. Letter indicate significant differences revealed by Dunn’s multiple comparisons test p<0.05.DOI: http://dx.doi.org/10.7554/eLife.26404.020

Altogether, spt-PALM and live PALM data analyses showed that mutations in REM-CA affect the mobility and the organization of the protein by altering the partition of StREM1.3 molecules into nanodomains (Figures 3–6), likely causing the functional impairments observed. These results can be discussed in view of in silico spatial simulations of signaling events suggesting that proper partition of proteins optimizes signaling at PM (Mugler et al., 2013). In the case of StREM1.3, an altered partition in nanodomain is sufficient to inhibit the signaling events involving StREM1.3 in the PM. StREM1.3 being a phosphorylated protein, one can hypothesize that the REM-CA mutations alter the partition with its unknown cognate kinase(s) and/or interacting partners. Moreover, StREM1.3 locates to both the PM and in plasmodesmata, REM-CA mutations may also alter the partition between these two PM sub-compartments. These hypotheses are currently investigated in our laboratories.

## Conclusions

## Interaction between REM-CA and lipids mediates plant PM-nanodomain organization

Plant and animal plasma membranes are dynamically sub-compartmentalized into membrane domains (Lingwood and Simons, 2010). In plants, the REMORIN protein family represents the best-studied PM-domain-associated proteins (Jarsch and Ott, 2011). Genetic, live cell imaging and biochemical studies suggest that REM domains segregate into molecular platforms involved in hormone signaling and plant-microbe interactions (Jarsch and Ott, 2011; Gui et al., 2016), but the functional relevance of REM PM-nanodomain organization and the molecular mechanisms underlying PM-nanodomain organization of REM are still unknown.

Here, we provide an unprecedented resolution of the molecular mechanisms that control protein spatio-temporal segregation into membrane nanodomains. Our work reveals that the group 1 REM StREM1.3 is targeted to inner-leaflet PM nanodomains from the cytosol by REM-CA, an unconventional C-terminal structural lipid-binding motif that undergoes a conformational change in presence of PI4P and sterols (Figures 1 and 2). These lipids seem to form the core components modulating REM nanodomain organization. The precise cooperativity between each lipid in the inner-leaflet remains to be determined (Vonkova et al., 2015), in particular the role of sterols, which do not seem to be in direct interaction with REM-CA (Figures 2 and 3). It is well established that sterols interact preferentially with saturated-fatty acid containing lipids to form highly ordered lipid phases (Lorent and Levental, 2015). Interestingly, plant PM PI4P contain up to 30–60% of saturated acyl chains (Furt et al., 2010; König et al., 2007), we may assume that this preferential interaction is one of the driving force that allow the clustering REM-enriched domains (Figure 1). Following our model, a dynamic ménage-à-trois between REM-CA, PI4P and sterols inside the inner-leaflet phospholipid bilayer PM inner-leaflet could lead to a definition of what drives PM-nanodomain formation (Figure 2).

## REM-CA diversity and REM-CA-like moieties beyond the plant kingdom

Mutations of StREM1.3 REM-CA residues involved in the interaction with the polar heads of phosphoinositides modify PM lateral segregation and dynamics and consequently the protein's functionality (Figures 4, 5 and 6). This reflects the importance of REM-CA in the definition of StREM1.3's lateral segregation and it shows that lateral segregation is determined by the primary sequence of REM-CA. The six different phylogenetic groups of REMs label spatially distinct PM-domains (Jarsch et al., 2014; Raffaele et al., 2007). It follows that the evolution of the REM-CA sequence could be involved in the diversification of the different PM-domains marked by REMs (Raffaele et al., 2007). A more in-depth analysis of REM-CAs from other groups and the involvement of lipids in domain localization of REMs will provide crucial information about the determinants of PM lateral organization of the REM protein family that could in fine allow the deciphering of critical PM-associated signaling events in plants. In addition, it is reasonable to think that the S-acylation of REMs on their REM-CA moieties could modify the protein-lipid interaction that modulate their dynamics (Hemsley et al., 2013) (Figure 1—figure supplement 1). Study of a prenylated K-Ras protein in mammalian cells showed a complex structural cross-talk between the primary sequence of the protein and its prenyl moeity (Zhou et al., 2017). Therefore, the study of acylated REM-CAs could provide another level of complexity in the establishment of REM-associated PM-nanodomains.

The structural conformation of REM-CA is original and does not fit with other membrane-anchoring conformation already described in databases. The search for structural analogues of REM-CA in publicly available structure databases identified analogous domains in bacteria, viruses and animals (Raffaele et al., 2013). Thus, the understanding of the structural basis for REM-CA PM-binding and lateral segregation may bring about knowledge of crucial importance, spanning beyond the plant kingdom.

## PM nanodomains represent a functional unit for plant cell signaling

In plants, most membrane proteins are relatively immobile forming static membrane domains (Jarsch et al., 2014; Hosy et al., 2015; Martinière et al., 2012). It was therefore postulated that membrane domain formation and functionality are based on protein immobility. Unexpectedly, we show in the present work that non-functional REM-CA mutants showing an altered PM-nanodomain localization harbor an even lower diffusion coefficient than the WT (Figure 5). This observation reveals that PM-protein function does not rely solely on their immobility but rather on their ability to organize into supramolecular domains. In good agreement, REM-CA mutants show an altered ability to partition into nanodomains (Figure 6). It thus appears that REM-CA-defined PM-nanodomains may represent a functional unit for membrane-bound cell signaling in plants. The study of REM-CA mutants also reveals that the mobility behavior of single molecules is not directly linked to the partitioning of the resulting population. For example EOS-StREM1.3K192A proteins displaying a lower MSD compared to the WT but form larger clusters. Similarly, a higher MSD is not necessarily coupled to a higher diffusion coefficient as observed for EOS-StREM1.3K183S (Figure 5).

Altogether, our data reveal an unsuspected complexity in the definition of molecule organization and dynamics in the PM that we hope will pave the way for an exhaustive comprehension of the mechanisms regulating membrane-bound protein organization and function.

## Materials and methods

## Online methods

## Plant material, culture and transformation

Nicotiana benthamiana plants were cultivated in controlled conditions (16 hr photoperiod, 25°C). Proteins were transiently expressed via Agrobacterium tumefaciens as previously described in (Perraki et al., 2012). For subcellular localization studies and biochemical purification, plants were analyzed 2 days after infiltration using 0.2 OD agrobacterium suspension. For PVX:GFP spreading assays and gating experiments, plants were observed 5 days after infiltration. The A. tumefaciens GV3101 strain was cultured at 30°C on appropriate selective medium depending on constructs carried. For phosphoinositide homeostasis modulation, effects of phosphoinositide phosphatase expression were observed 20–24 hr post-infiltration (Simon et al., 2016).

## Treatment with Brefeldin A

Leaves transiently expressing each construct 48 hr post-agroinfiltration were infiltrated with a dH2O solution of Brefeldin A at a concentration of 50 µg/mL (B7651 SIGMA); from a DMSO stock solution; for 3 hr before observation. Mock conditions contain the same volume of DMSO alone. Leaves were then observed with a Zeiss LSM 880 confocal fluorescence microscope with an oil-immersion 63x lense using the appropriate excitation wavelengths for each fluorescent fusion proteins.

## Cloning, molecular constructs and peptides

All constructs were generated using either classical or 3-in-1 Gateway cloning strategies (www.lifetechnologies.com) with pDONR P4-P1R, pDONRP2R-P3, pDONR211 and pDONR207 as entry vectors, and pK7WGY2 (Karimi et al., 2002), pUBN-Dest::EosFP (Grefen et al., 2010) and pB7m34GW (Karimi et al., 2007) as destination vectors. StREM1.3 mutants were generated by site-directed mutagenesis as previously described in (Taton et al., 2000) with minor modifications. All constructs were propagated using the NEB10 E.coli strain (New England Biolabs). Ultrapure

REM-CA peptides were obtained by de novo peptide synthesis, Purity >98% with acetylation at the N-terminal (GenScript HK Limited).

## Viral spreading and gating assays

Viral spreading of PVX:GFP in N. benthamiana leaves was assessed as described in (Perraki et al., 2012) with some modifications: spreading of PVX:GFP was visualized by epifluorescence microscopy (using GFP long pass filter on a Nikon Eclipse E800 with x4 objective coupled to a Coolsnap HQ2 camera) at 5 days post-infection and the areas of at least 30 of PVX:GFP infection foci per condition and per experiment were measured using a custom made macro on ImageJ.

## Epidermal cells live imaging and quantification

Live imaging was performed using a Leica SP5 confocal laser scanning microscopy system (Leica, Wetzlar, Germany) equipped with Argon, DPSS and He-Ne lasers and hybrid detectors. N. benthamiana leaf samples were gently transferred between a glass slide and a cover slip in a drop of water. YFP and mCitrine (cYFP) fluorescence were observed with similar settings (i.e. excitation wavelengths of 488 nm and emission wavelengths of 490 to 550 nm). In order to obtain quantitative data, experiments were performed using strictly identical confocal acquisition parameters (e.g. laser power, gain, zoom factor, resolution, and emission wavelengths reception), with detector settings optimized for low background and no pixel saturation. Pseudo-colored images were obtained using the ‘Red hot’ look-up-table (LUT) of Fiji software (http://www.fiji.sc/). All quantifications were performed on raw images for at least min of 10 cells, at least two plants by condition with at least three independent replicates.

For quantification of the PM Spatial Clustering Index (SCI), which reveals the degree of segregation of fluorescence signal on the surface plane of the PM (Figure 1—figure supplement 4), fluorescence intensity was plotted with a 10 µm line on raw images of cells PM surface view, three line plots were randomly recorded per cell and at least 15 cells per experiments were analyzed. For each plot, the Spatial Clustering Index was calculated by dividing the mean of the 5% highest values by the mean of 5% lowest values. For fluorescence intensities quantification, the mean grey value was recorded using a region of interest (ROI) of 5 µm x 5 µm on PM surface view raw images.

## Confocal multispectral microscopy

di-4-ANEPPDHQ-labelled leaves were observed as described in (Gerbeau-Pissot et al., 2014) with a Leica TCS SP2-AOBS laser scanning microscope (Leica Microsystems, Germany) and a HCPL Apochromat CS 63x (N.A. 1.40) oil immersion objective. Images were excited with the 458 nm line and the 488 nm line of an argon laser for CFP and di-4-ANEPPDHQ respectively as described in (Gerbeau-Pissot et al., 2014). Fluorescence emissions were filtered between 465 and 500 nm for CFP. For di-4-ANEPPDHQ, to obtain ratiometric images, we recorded green and red fluorescence between 540 to 560 nm and 650 to 670 nm, respectively. The mean red/green ratio of pixels (RGM) corresponding to either the global membrane, the 10%, the 5% or the 2% of the most intense CFP pixels were compared on each image.

## spt-PALM VAEM, single molecule localization and tracking

N. N. benthamiana epidermal cells were imaged at room temperature. Samples of leaves of 2 week-old plants transiently expressing EOS-tagged constructs were mounted between a glass slide and a cover slip in a drop of water to avoid dehydration. Acquisitions were done on an inverted motorized microscope Nikon Ti Eclipse (Nikon France S.A.S., Champigny-sur-Marne, France) equipped with a 100× oil-immersion PL-APO objective (NA = 1.49), a Total Internal Reflection Fluorescence Microscopy (TIRF) arm, a Perfect Focus System (PFS) allowing long acquisition in oblique illumination mode, and a sensitive Evolve EMCCD camera (Photometrics, Tucson, USA), see Video 2. Images acquisitions and processing were done as previously described by Hosy et al. (2015).

SR-Tesseler software was used to produce voronoï diagrams, and subsequently quantify molecule organization parameters as previously recommended (Levet et al., 2015). Taking in account fluorophore photophysical parameters, localization accuracy and the first rank of local density of fluorescent molecules, correction for multiple detections occurring in a vicinity of space (ω) and blinking tolerance time interval (τ) are identified as the same molecule, merged together and replaced by a new detection at a location corresponding to their barycentre. Because first rank of local density of fluorescent molecules was below 0.5 mol/µm² (c.a ranking from 0.1 to 0.3 mol/µm²), we used a fixed search radius ω of 48 nm as recommended (Levet et al., 2015). To determine the correct time interval τ, the photophysics of the fluorophore namely the off-time, number of blinks per molecule and on-time distributions are computed for each cell. For example, for a dataset composed of 618,502 localizations, the average number of blinks per molecule was 1.42, and the number of molecules after cleaning was 315,929. As a control, the number of emission bursts (439,331), counted with τ = 0, divided by the average number of blinks per molecule (1.42) was only 2.15% different. After correction for artefacts due to multiple single-molecule localization, we computed potential cluster using a threshold δ1i>2δN, where δN is the average localization density at PM level and δ1i is the density in presumed protein-forming nanocluster, with a minimal area of 32 nm² and with at least five localization by cluster.

## Coarse-grained molecular dynamics

Coarse-grained simulations have been carried out by using Gromacs v4.5.4 (Hess et al., 2008) on a 6-processor core i7 cluster. Coarse-graining reduces the complexity of the molecular system and is widely used to study peptide- or protein-membrane interactions (Lindahl and Sansom, 2008). The initial structures of REM-CA peptides have been modeled as all-atom α-helices using standard backbone angles (φ = −90° and ψ = −45°) and side chain conformers with the ribosome v1.0 software (Crowet et al., 2012). These models were converted to a CG representation suitable for the MARTINI 2.1 forcefield (Crowet et al., 2012) with the Martinize script and the coarse-grained peptide was placed in a simulation box at least at 1 nm from a pre-equilibrated PLPC bilayer of 128 lipids or a PLPC:Cholesterol:PIP (98:19:2) bilayer of 124 lipids (Marrink et al., 2008; López et al., 2009, 2013). The N- and C-terminal ends of the peptide are charged and a helical secondary structure topology is maintained between residues 172–187. With Martini forcefield, secondary structures have to be restrained and a rational a priori on the structure has to be made. In our case, the peptide representation as two domains is based on in silico analyses and on the FTIR and NMR data (see Figure 2—figure supplements 2, 3). Water particles were then added as well as ions to neutralize the system. A 5000-steps steepest-descent energy minimization was performed to remove any steric clashes. Five 2.5 μs simulations have been run for each peptide. Temperature and pressure were coupled at 300 K and one bars using the weak coupling Berendsen algorithm (Crowet et al., 2012) with τ T = 1 ps and τ p=0.5 ps. Pressure was coupled semi-isotropically in XY and Z. Non-bonded interactions were computed up to 1.2 nm with the shift method. Electrostatics were treated with ε = 15. The compressibility was 105 (1/bars).

## In silico analysis of REM-CA from StREM1.3

Sequence and predicted structure of the StREM1.3 REM-CA peptide predicted by different methods (NPSA (https://npsa-prabi.ibcp.fr/cgi-bin/npsa_automat.pl?page=/NPSA/npsa_seccons.html), hydrophobic cluster analysis (HCA) 15, the consensus secondary structure prediction is indicated: alpha helix (h), random coil (c), beta sheet (e). In HCA plot of the StREM1.3 REM-CA sequence, V, F, W, Y, M, L and I are hydrophobic residues. These amino acids are circled and hatched to form hydrophobic clusters.

## Atomistic molecular dynamics

From the coarse-grained simulations, ending frames from one of the replicates have been taken to carry atomistic simulations. The conversion has been carried out as described in Wassenaar et al. (2013). Briefly, atomistic lipid fragments and amino acid are backmapped and the system is relaxed through several energy minimizations and molecular dynamic simulations with position restraints. Cholesterol is reversed to sitosterol (Poger and Mark, 2013) and PIP to PI4P (Holdbrook et al., 2010). Simulations have been performed with the GROMOS96 54a7 force field (Schmid et al., 2011) with the Berger topology for PLPC (Poger et al., 2010; Poger and Mark, 2010). All the systems studied were first minimized by steepest descent for 5000 steps. Then NVT and NPT equilibrations were carried on for 0.1 and 1 ns. The peptide was under position restraints and periodic boundary conditions (PBC) were used with a two fs time step. Production runs were performed for 50 ns. All the systems were solvated with SPC water (Berendsen et al., 1981), and the dynamics were carried out in the NPT conditions (300 K and 1 bar). Temperature was maintained by using the v-rescale method (Bussi et al., 2007) with τT = 2.0 ps and a semiisotropic pressure was maintained by using the Berendsen barostat (Berendsen et al., 1984) with a compressibility of 4.5 × 105 (1/bar) and τp=1 ps. Electrostatic interactions were treated by using the particle mesh Ewald (PME) method (Darden et al., 1993). Van der Waals and electrostatics were treated with a 1.0 nm cut-off. Bond lengths were maintained with the LINCS algorithm (Hess et al., 1997). The trajectories were performed and analysed with the GROMACS 4.5.4 tools as well as with homemade scripts and softwares, and 3D structures were analyzed with both PYMOL (DeLano Scientific, http://www.PyMOL.org) and VMD softwares (Humphrey et al., 1996).

## TLC analysis of phosphoinositides mix (PIPs)

Phosphoinositides mix (PIPs), #P6023 SIGMA, was separated by HP-TLC plate along with authentic standards: Phosphatidylserine (PS) Phosphatidylinositol (PI), Phosphatidylinositol-4-phosphate (PI4P) and Phosphatidylinositol-4,5-bisphosphate PI(4,5)P2) (Furt et al., 2010). HP-TLC were stained with Primulin and relative amounts of each lipid species present in the PIPs mix quantified by densitometry scanning (Macala et al., 1983)

## Fourier transformed-infrared (FTIR) spectroscopy

MLV were prepared by rehydrating the resulting films with D2O or Tris-HCl buffer (10 mM pH 7.0) for FT-IR experiments as described previously (Nasir et al., 2016). Lipids were co-dissolved in chloroform/methanol (2:1, v/v) without or with peptides at a 10-to-1, lipid-to-peptide molar ratio. FTIR spectra of lipid-peptide MLV were recorded on Bruker Equinox 55 spectrometer (Karlsruhe, Germany) equipped with a liquid nitrogen-cooled Deuterated Triglycine Sulfate (DTGS) detector. The spectra were measured with a spectral resolution of 4 cm−1 and are an average of 128 scans. All the experiments were performed with a demountable cell (Bruker) equipped with CaF2 windows (Nasir et al., 2013). During the experiments, the spectrophotometer was continuously purged with filtered dry air. MLV solution containing or not peptides was deposited into the CaF2 window-equipped cell. All FTIR spectra were representative of at least two independent measurements. The attribution of different peaks was carried out according to the literature (Arrondo and Goñi, 1998; Kong and Yu, 2007).

## Adsorption experiments at constant surface area

Peptide adsorption into lipid monolayer was recorded on an automated Langmuir film system (KSV Minitrough 7.5 × 20 cm, Biolin Scientific, Stockholm, Sweden). The lipid monolayers (1-Palmitoyl-2-linoleyl-sn-glycerol-3-phosphocholine (PLPC) alone, PLPC-Sitosterol (80–20 molar ratio) or PLPC-sitosterol-phosphoinositides sodium salt from bovine brain (P6023 SIGMA, see Figure 2—figure supplement 1B), 70-20-10 molar ratio, were formed by spreading a precise volume of lipid solutions prepared in chloroform/methanol (2:1 v/v). After stabilization of the lipid monolayer at a defined initial surface pressure, peptides (solubilized Tris-HCl, 10 mM pH7.0 22 ± 1°C) were injected in the subphase (Tris-HCl, 10mM pH7.0, 22 ± 1°C) to a final concentration of 0.16 µM. The surface pressure variation is recorded over time. Experiments at different initial surface pressures were performed in order to plot the maximal surface pressure increase (πmax) as a function of the initial surface pressure (πi) and to determine the maximal insertion pressure (MIP) as previously described (Eeman et al., 2009; Deleu et al., 2014; Nasir and Besson, 2011).

## Sample preparation for NMR

To prepare multilamellar vesicles (MLV), REM-CA peptides were solubilised in chloroform/methanol (2:1, v:v) and mixed with the appropriate amount of lipid powder (DMPC, PIPs and sitosterol) adjusting the REM-CA-to-lipid ratio (1:25). Solvent was evaporated under N2 airflow to obtain a thin lipid film. Lipids were rehydrated with ultrapure water before lyophilisation. The lyophilized powder was then hydrated with appropriate amount of deuterium depleted water and homogenized by three cycles of shaking in a vortex mixer, freezing (liquid nitrogen, −196°C, 1 min) and thawing (40°C in a water bath, 10 min). This protocol leads to a milky suspension of micrometer-sized MLVs.

## Solid-state NMR spectroscopy

2H NMR experiments were carried out on Bruker Avance III 400 MHz (9.4 T) and Bruker Avance III 500 MHz (11.75 T) spectrometer. Samples were equilibrated 30 min at a given temperature before data acquisition. 2H NMR experiments on 2H-labeled DMPC were performed at 76 MHz with a phase-cycled quadrupolar echo pulse sequence (90°x-τ−90°y-τ-acq). 31P NMR spectra were acquired at 202 MHz using a phase-cycled Hahn-echo pulse sequence (90°x-τ−180°x/y-τ-acq). Acquisition parameters were set as follows: spectral window of 50 kHz for 31P NMR, 250 kHz for 2H NMR, π/2 pulse widths of 15 μs for 31P and 2.62 μs for 2H, interpulse delays τ were of 40 μs, recycle delays ranged from 1.1 to 5 s. 2 k to 4 k scans were used for 2H and 31P NMR experiments, depending on the sample. The spectra were processed using Lorentzian line-broadening of 100 to 200 Hz for 2H spectra.

13C experiments were recorded on a Bruker Avance III 800 MHz (18.8 T) at 11 kHz magic angle spinning (MAS) frequency. Sample temperature was held constant at −12°C with the internal reference DSS (Böckmann et al., 2009). The two dimensional proton-driven spin diffusion 13C-13C (PDSD) spectra were recorded with an initial 1H-13C cross-polarization and a mixing time of 50 ms. Acquisition times were set to 8 ms and 20 ms in the indirect and direct dimension, respectively, and the interscan delay was chosen to 2 s. Proton decoupling during acquisition with a frequency of 90 kHz was applied, using the SPINAL-64 decoupling sequence (Fung et al., 2000). All the spectra were processed and analyzed using Bruker Topspin 3.2 software and the Ccpnmr Analysis software (Vranken et al., 2005).

## Statistics

For all statistical analyses, ANOVA and Tukey's honestly significant difference tests were performed with Graphpad Prism, in order to find means that are significantly different from each other. Boxplots were drawn using Graphpad Prism (horizontal bars in the boxes represent the median, boxes the interquartile range, whiskers extend out 1.5 times the interquartile range, and individual points are outliers), and other graphs were drawn using excel software (Microsoft, https://products.office.com/).
